--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
@@ -18,7 +18,20 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": ".",
+
+    /* Paths */
+    "paths": {
+      "@/components*": ["./src/components*"],
+      "@/enums*": ["./src/enums*"],
+      "@/hooks*": ["./src/hooks*"],
+      "@/interfaces*": ["./src/interfaces*"],
+      "@/pages*": ["./src/pages*"],
+      "@/schemas*": ["./src/schemas*"],
+      "@/styles*": ["./src/styles*"],
+      "@/utils*": ["./src/utils*"]
+    }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
